--- a/#src/subcatalog.html
+++ b/#src/subcatalog.html
@@ -5,435 +5,12 @@
 @@include('_header.html')
 <section class="subcatalog">
 	<div class="container">
+		@@include('_breadcrums.html')
+		<h1 class="subcatalog__title">
+			ЭЛЕКТРОПРИВОД АСИНХРОННЫЙ
+		</h1>
 		<div class="subcatalog__row">
 			<aside class="subcatalog__aside">
-				<nav class="subcatalog__menu menu-subcatalog">
-					<div class="menu-subcatalog__header">
-						<div class="menu-subcatalog__title">Каталог товаров</div>
-						<div class="menu-subcatalog__burger">
-							<div class="menu-subcatalog__lines">
-								<span></span>
-								<span></span>
-								<span></span>
-							</div>
-						</div>
-					</div>
-					<div class="menu-subcatalog__body">
-						<ul class="menu-subcatalog__list">
-							<li class="menu-subcatalog__parent">
-								<a href="#" class="menu-subcatalog__link">
-									ЭЛЕКТРОПРИВОД
-								</a>
-								<div class="menu-subcatalog__submenu submenu-subcatalog">
-									<ul class="submenu-subcatalog__menu">
-										<li class="submenu-subcatalog__parent">
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-											<div class="submenu-subcatalog__body">
-												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															Control Techniques
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															СHINT
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															ABB
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li class="submenu-subcatalog__parent">
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-											<div class="submenu-subcatalog__body">
-												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															Control Techniques
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															СHINT
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															ABB
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-										<li class="submenu-subcatalog__parent">
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-											<div class="submenu-subcatalog__body">
-												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															Control Techniques
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															СHINT
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															ABB
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li class="submenu-subcatalog__parent">
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-											<div class="submenu-subcatalog__body">
-												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															Control Techniques
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															СHINT
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															ABB
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-										<li class="submenu-subcatalog__parent">
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-											<div class="submenu-subcatalog__body">
-												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															Control Techniques
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															СHINT
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															ABB
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li class="submenu-subcatalog__parent">
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-											<div class="submenu-subcatalog__body">
-												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															Control Techniques
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															СHINT
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															ABB
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-										<li class="submenu-subcatalog__parent">
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-											<div class="submenu-subcatalog__body">
-												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															Control Techniques
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															СHINT
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															ABB
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li class="submenu-subcatalog__parent">
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-											<div class="submenu-subcatalog__body">
-												<ul class="submenu-subcatalog__items items-submenu-subcatalog">
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															Control Techniques
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															СHINT
-														</a>
-													</li>
-													<li>
-														<a href="#" class="items-submenu-subcatalog__link">
-															ABB
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-
-									</ul>
-								</div>
-							</li>
-							<li class="menu-subcatalog__parent">
-								<a href="#" class="menu-subcatalog__link">
-									ЭЛЕКТРОДВИГАТЕЛИ
-								</a>
-								<div class="menu-subcatalog__submenu submenu-subcatalog">
-									<ul class="submenu-subcatalog__menu">
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="menu-subcatalog__parent">
-								<a href="#" class="menu-subcatalog__link">
-									КАБЕЛЬ, ПРОВОД И АКСЕССУАРЫ
-								</a>
-								<div class="menu-subcatalog__submenu submenu-subcatalog">
-									<ul class="submenu-subcatalog__menu">
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="menu-subcatalog__parent">
-								<a href="#" class="menu-subcatalog__link">
-									УСТРОЙСТВА УПРАВЛЕНИЯ И СИГНАЛИЗАЦИИ
-								</a>
-								<div class="menu-subcatalog__submenu submenu-subcatalog">
-									<ul class="submenu-subcatalog__menu">
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="menu-subcatalog__parent">
-								<a href="#" class="menu-subcatalog__link">
-									ДЛЯ УПРАВЛЕНИЯ И ЗАЩИТЫ ЭЛЕКТРОДВИГАТЕЛЕМ
-								</a>
-								<div class="menu-subcatalog__submenu submenu-subcatalog">
-									<ul class="submenu-subcatalog__menu">
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="menu-subcatalog__parent">
-								<a href="#" class="menu-subcatalog__link">
-									ДЛЯ РАСПРЕДЕЛЕНИЯ ЭЛЕКТРОЭНЕРГИИ
-								</a>
-								<div class="menu-subcatalog__submenu submenu-subcatalog">
-									<ul class="submenu-subcatalog__menu">
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="menu-subcatalog__parent">
-								<a href="#" class="menu-subcatalog__link">
-									ДЛЯ УПРАВЛЕНИЯ И ЗАЩИТЫ ЭЛЕКТРОДВИГАТЕЛЕМ
-								</a>
-								<div class="menu-subcatalog__submenu submenu-subcatalog">
-									<ul class="submenu-subcatalog__menu">
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="menu-subcatalog__parent">
-								<a href="#" class="menu-subcatalog__link">
-									ДЛЯ РАСПРЕДЕЛЕНИЯ ЭЛЕКТРОЭНЕРГИИ
-								</a>
-								<div class="menu-subcatalog__submenu submenu-subcatalog">
-									<ul class="submenu-subcatalog__menu">
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												АСИНХРОННЫЙ
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Серво
-											</a>
-										</li>
-										<li>
-											<a href="#" class="submenu-subcatalog__link">
-												Постоянного тока
-											</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</nav>
-
 				<div class="seria-subcatalog__sidebar">
 					<div class="seria-subcatalog__title">
 						Серия
@@ -479,12 +56,8 @@
 
 
 				</div>
-
 			</aside>
 			<div class="subcatalog__content content-subcatalog">
-				<h1 class="subcatalog__title">
-					ЭЛЕКТРОПРИВОД АСИНХРОННЫЙ
-				</h1>
 				<h2 class="content-subcatalog__title">
 					Асинхронный преобразователь частоты
 				</h2>
@@ -493,78 +66,78 @@
 					ротором. Это обусловлено их низкой ценой, простотой конструкции и чрезвычайной надежностью. Главной задачей
 					частотных преобразователей является изменение скорости вращения двигателя путем регулирования входной частоты.
 				</p>
-				<div class="content-subcatalog__items">
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+				<div class="product__items">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
-					<div class="content-subcatalog__item item-subcatalog">
-						<div class="item-subcatalog__title">
+					<div class="product__item item-product">
+						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
 						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-subcatalog__excerpt">Универсальный привод нового поколения</p>
-						<a href="#" class="item-subcatalog__more">подробнее</a>
+						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<a href="#" class="item-product__more">подробнее</a>
 					</div>
 				</div>
 				@@include('_pagination.html')
