sub and catalog adaptive

--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -438,7 +438,7 @@
 				</nav>
 			</aside>
 			<div class="catalog__content">
-				<h1 class="catalog__title">Популярные товары</h1>
+				<h1 class="catalog__title">Новые товары</h1>
 				<div class="product__items">
 					<div class="product__item item-product">
 						<div class="item-product__title">
