--- a/#src/information.html
+++ b/#src/information.html
@@ -7,14 +7,16 @@
 	<div class="container">
 		<div class="information__content content-information _tabs">
 			<nav class="content-information__nav">
-				<div class="content-information__item _tabs-item _active">Требования к контрагентам</div>
-				<div class="content-information__item _tabs-item">Условия оплаты</div>
-				<div class="content-information__item _tabs-item">Условия хранения</div>
-				<div class="content-information__item _tabs-item">Сертификаты</div>
+				<div class="content-information__item _tabs-item _active">Программирование</div>
+				<div class="content-information__item _tabs-item">Разроботка</div>
+				<div class="content-information__item _tabs-item">Наладка</div>
+				<div class="content-information__item _tabs-item">внедрение</div>
+				<div class="content-information__item _tabs-item">Модернизация</div>
 			</nav>
+			<h3 class="content-information__title">систем автоматизации производства</h3>
 			<div class="content-information__body">
 				<div class="content-information__block block-content-information _tabs-block _active">
-					<h4 class="title">Требования к контрагентам</h4>
+					<h4 class="title">Программирование</h4>
 					<div class="block-content-information__text">
 						<p>
 							В целях реализации ООО «Спецресурс» данного ему статьей 312 Гражданского кодекса РФ права требования
@@ -38,7 +40,7 @@
 					</div>
 				</div>
 				<div class="content-information__block block-content-information _tabs-block">
-					<h4 class="title">Условия оплаты</h4>
+					<h4 class="title">Разроботка</h4>
 					<div class="block-content-information__text">
 						<p>
 							Оплата осуществляется только по безналичному расчету.</p>
@@ -52,7 +54,7 @@
 					</div>
 				</div>
 				<div class="content-information__block block-content-information _tabs-block">
-					<h4 class="title">Условия хранения</h4>
+					<h4 class="title">Наладка</h4>
 					<div class="block-content-information__text">
 						<p> <strong>Уважаемые покупатели!</strong></p>
 						<p>Предлагаем воспользоваться услугой бесплатного хранения на нашем складе.В срок до 10 дней включительно со
@@ -66,7 +68,13 @@
 					</div>
 				</div>
 				<div class="content-information__block block-content-information _tabs-block">
-					<h4 class="title">Сертификаты</h4>
+					<h4 class="title">внедрение</h4>
+					<div class="block-content-information__text developer">
+						<p>данный раздел находится в разработке.</p>
+					</div>
+				</div>
+				<div class="content-information__block block-content-information _tabs-block">
+					<h4 class="title">Модернизация</h4>
 					<div class="block-content-information__text developer">
 						<p>данный раздел находится в разработке.</p>
 					</div>
