--- a/#src/_header.html
+++ b/#src/_header.html
@@ -15,8 +15,8 @@
 				</div>
 				<nav class="menu__body">
 					<ul class="header__menu-list">
-						<li class="header__menu-item">
-							<a href="#" class="header__menu-link active">
+						<li class="header__menu-item active">
+							<a href="#" class="header__menu-link">
 								О компании
 							</a>
 						</li>
