--- a/#src/catalog.html
+++ b/#src/catalog.html
@@ -23,30 +23,30 @@
 					</div>
 					<div class="menu-catalog__body">
 						<ul class="menu-catalog__list">
-							<li class="menu-catalog__parent">
-								<a href="#" class="menu-catalog__link">
+							<li>
+								<a href="">
 									ЭЛЕКТРОПРИВОД
 								</a>
 								<div class="menu-catalog__submenu submenu-catalog">
 									<ul class="submenu-catalog__menu">
-										<li class="submenu-catalog__parent">
-											<a href="#" class="submenu-catalog__link">
+										<li>
+											<a href="">
 												АСИНХРОННЫЙ
 											</a>
 											<div class="submenu-catalog__body">
 												<ul class="submenu-catalog__items items-submenu-catalog">
 													<li>
-														<a href="#" class="items-submenu-catalog__link">
+														<a href="">
 															Control Techniques
 														</a>
 													</li>
 													<li>
-														<a href="#" class="items-submenu-catalog__link">
+														<a href="">
 															СHINT
 														</a>
 													</li>
 													<li>
-														<a href="#" class="items-submenu-catalog__link">
+														<a href="">
 															ABB
 														</a>
 													</li>
