--- a/#src/subcatalog.html
+++ b/#src/subcatalog.html
@@ -71,8 +71,10 @@
 						<div class="item-product__title">
 							ПРЕОБРАЗОВАТЕЛЬ ЧАСТОТЫ ACS580 0,75 - 500 КВТ
 						</div>
-						<img src="img/catalog/03.jpg" alt="">
-						<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						<div class="item-product__box">
+							<img src="img/catalog/03.jpg" alt="">
+							<p class="item-product__excerpt">Универсальный привод нового поколения</p>
+						</div>
 						<a href="#" class="item-product__more">подробнее</a>
 					</div>
 					<div class="product__item item-product">
