--- a/#src/index.html
+++ b/#src/index.html
@@ -4,24 +4,34 @@
 @@include('_header.html')
 <section class="section-top">
 	<div class="container">
-		<div class="section-top__inner">
-			<div class="section-top__box">
-				<div class="section-top__title">
-					СОКОЛ 1
+		<div class="section-top__slider">
+			<div class="section-top__slider-body _swiper">
+				<div class="section-top__slide _ibg">
+					<img src="img/glav/top-img.jpg" alt="">
 				</div>
-				<div class="section-top__text-box">
-					<div class="section-top__percent">100%</div>
-					<div class="section-top__text">
-						БЕЗОПАСНОСТЬ
-						<span>спасаем жизни людей</span>
-					</div>
+				<div class="section-top__slide _ibg">
+					<img src="img/glav/top-img.jpg" alt="">
 				</div>
-				<a href="#" class="section-top__btn">Перейти в каталог</a>
+				<div class="section-top__slide _ibg">
+					<img src="img/glav/top-img.jpg" alt="">
+				</div>
+				<div class="section-top__slide _ibg">
+					<img src="img/glav/top-img.jpg" alt="">
+				</div>
 			</div>
-			<div class="section-top__img">
-				<img src="img/glav/top-img.jpg" alt="">
+			<div class="section-top__navigation">
+				<div class="section-top__arrows section-top__arrow-prev">
+					<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M7.4 17L1 9L7.4 1" stroke="white" />
+					</svg>
+				</div>
+				<div class="section-top__dots"></div>
+				<div class="section-top__arrows section-top__arrow-next">
+					<svg width="8" height="18" viewBox="0 0 8 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0.399806 0.999999L6.79981 9L0.399804 17" stroke="white" />
+					</svg>
+				</div>
 			</div>
-
 		</div>
 
 	</div>
