--- a/#src/about.html
+++ b/#src/about.html
@@ -163,9 +163,35 @@
 			<div id="about-vacancies" class="about-vacancies tab-item-about _tabs-block">
 				<h4 class="title">вакансии</h4>
 				<div class="about-vacancies__inner">
-					<p class="about-vacancies__text">
-						в данный момент у нас нет активных вакансий
-					</p>
+					<ul class="about-vacancies__list list-vacancies">
+						<li>
+							<a href="" class="list-vacancies__name">
+								Главный специалист
+							</a>
+							<div class="list-vacancies__desc">
+								Главный специалистГлавный специалистГлавный специалистГлавный специалистГлавный специалистГлавный
+								специалистГлавный специалистГлавный специалист
+							</div>
+						</li>
+						<li>
+							<a href="" class="list-vacancies__name">
+								Главный специалист
+							</a>
+							<div class="list-vacancies__desc">
+								Главный специалистГлавный специалистГлавный специалистГлавный специалистГлавный специалистГлавный
+								специалистГлавный специалистГлавный специалист
+							</div>
+						</li>
+						<li>
+							<a href="" class="list-vacancies__name">
+								Главный специалист
+							</a>
+							<div class="list-vacancies__desc">
+								Главный специалистГлавный специалистГлавный специалистГлавный специалистГлавный специалистГлавный
+								специалистГлавный специалистГлавный специалист
+							</div>
+						</li>
+					</ul>
 					<div class="about-vacancies__img">
 						<img src="img/about/vacancies.jpg" alt="">
 					</div>
