--- a/#src/about.html
+++ b/#src/about.html
@@ -34,11 +34,6 @@
 								статьи
 							</a>
 						</li>
-						<li class="submenu__item">
-							<a href="#" class="submenu__link _tabs-item">
-								Партнеры
-							</a>
-						</li>
 					</ul>
 				</div>
 			</div>
@@ -69,10 +64,57 @@
 						</div>
 					</div>
 				</div>
-				<div id="about-news" class="about-news tab-item-about _tabs-block">
+				<div id="about-news" class="about-articles tab-item-about _tabs-block">
 					<h4 class="title">новости</h4>
-					<div class="about-news__inner">
-						<p>данный раздел находится в разработке.</p>
+					<div class="about-articles__inner">
+						<div class="about-articles__prev">
+							<div class="about-articles__prev-box">
+								<div class="about-articles__prev-title">
+									Основные виды медного кабеля и Их применение
+								</div>
+								<p class="about-articles__prev-text">
+									Связавшись с электромонтажом на своем собственном участке или в собственной квартире, можно очень
+									скоро
+									заметить, что кабели и провода, используемые в монтаже – преимущественно медные, реже алюминиевые.
+									используемые в монтаже – преимущественно медные, реже алюминиевые.
+								</p>
+								<a href="#" class="about-articles__prev-link">
+									читать новость
+								</a>
+							</div>
+							<div class="about-articles__prev-img" data-da="about-articles__prev-box, 1, 991,98">
+								<img src="img/about/prev-articles.jpg" alt="">
+							</div>
+						</div>
+						<div class="about-articles__slider slider-about-articles">
+							<div class="slider-about-articles__body">
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-1.png);"></div>
+									<div class="about-articles__slide--title">
+										Таблица проводов
+									</div>
+								</a>
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
+									<div class="about-articles__slide--title">
+										Соответствие аналогов марок кабеля
+									</div>
+								</a>
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-3.png);"></div>
+									<div class="about-articles__slide--title">
+										Сечение кабеля и диаметр: в чем различие?
+									</div>
+								</a>
+								<a href="#" class="about-articles__slide">
+									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-4.png);"></div>
+									<div class="about-articles__slide--title">
+										Сечение кабеля и диаметр: в чем различие?
+									</div>
+								</a>
+							</div>
+						</div>
+						<a href="#" class="about-articles__link"> Посмотреть все статьи</a>
 					</div>
 				</div>
 				<div id="about-gallery" class="about-gallery tab-item-about _tabs-block">
@@ -115,10 +157,36 @@
 				<div id="about-vacancies" class="about-vacancies tab-item-about _tabs-block">
 					<h4 class="title">вакансии</h4>
 					<div class="about-vacancies__inner">
-						<p class="about-vacancies__text">
-							в данный момент у нас нет активных вакансий
-						</p>
-						<div class="about-vacancies__img">
+						<ul class="about-vacancies__list list-vacancies _spollers">
+							<li class="list-vacancies__item">
+								<div class="list-vacancies__name _spoller">
+									Главный специалист
+								</div>
+								<div class="list-vacancies__desc">
+									Главный специалистГлавный специалистГлавный специалистГлавный специалистГлавный специалистГлавный
+									специалистГлавный специалистГлавный специалист
+								</div>
+							</li>
+							<li class="list-vacancies__item">
+								<div class="list-vacancies__name _spoller">
+									Главный специалист
+								</div>
+								<div class="list-vacancies__desc _spoller">
+									Главный специалистГлавный специалистГлавный специалистГлавный специалистГлавный специалистГлавный
+									специалистГлавный специалистГлавный специалист
+								</div>
+							</li>
+							<li class="list-vacancies__item">
+								<div class="list-vacancies__name _spoller">
+									Главный специалист
+								</div>
+								<div class="list-vacancies__desc">
+									Главный специалистГлавный специалистГлавный специалистГлавный специалистГлавный специалистГлавный
+									специалистГлавный специалистГлавный специалист
+								</div>
+							</li>
+						</ul>
+						<div class="about-vacancies__img _ibg">
 							<img src="img/about/vacancies.jpg" alt="">
 						</div>
 					</div>
@@ -171,21 +239,9 @@
 										Сечение кабеля и диаметр: в чем различие?
 									</div>
 								</a>
-								<!-- <a href="#" class="about-articles__slide">
-									<div class="about-articles__slide-bg" style="background-image: url(img/about/slide-2.png);"></div>
-									<div class="about-articles__slide--title">
-										Соответствие аналогов марок кабеля
-									</div>
-								</a> -->
 							</div>
 						</div>
-						<a href="#" class="about-articles__link"> Посмотреть все статьи</a>
-					</div>
-				</div>
-				<div id="about-partners" class="about-partners tab-item-about _tabs-block">
-					<h4 class="title">Партнеры</h4>
-					<div class="about-partners__inner">
-						<p>данный раздел находится в разработке.</p>
+						<a href="#" class="about-articles__link"> Посмотреть все новости</a>
 					</div>
 				</div>
 			</div>
