--- a/#src/index.html
+++ b/#src/index.html
@@ -3,27 +3,8 @@
 @@include('_head.html')
 @@include('_header.html')
 <section class="section-top">
-	<div class="container">
-		<div class="section-top__inner">
-			<div class="section-top__box">
-				<div class="section-top__title">
-					СОКОЛ 1
-				</div>
-				<div class="section-top__text-box">
-					<div class="section-top__percent">100%</div>
-					<div class="section-top__text">
-						БЕЗОПАСНОСТЬ
-						<span>спасаем жизни людей</span>
-					</div>
-				</div>
-				<a href="#" class="section-top__btn">Перейти в каталог</a>
-			</div>
-			<div class="section-top__img">
-				<img src="img/glav/top-img.jpg" alt="">
-			</div>
-
-		</div>
-
+	<div class="section-top__img _ibg">
+		<img src="img/glav/top-img.jpg" alt="">
 	</div>
 </section>
 
